<resources>
    <string name="app_name">Media Player</string>
    <string name="thu_vien">Thư viện nhạc</string>
    <string name="channel_name">MediaPlayer notification channel</string>
    <string name="channel_description">Notification channel</string>
    <string name="default_title">Em gai mua - Mr.Siro ft. Huong Tram</string>
    <string name="default_song">Em gai mua</string>
    <string name="default_artist">Mr.Siro ft. Huong Tram</string>
    <string name="default_album">Huong Tram Vol.6</string>
    <string name="dang_phat">Đang phát</string>
    <string name="default_lyrics">Mưa trôi cả bầu trời nắng</string>
    <string name="current_time_example">00:00</string>
    <string name="duration_example">03:20</string>
    <string name="shuffle">Phát ngẫu nhiên</string>
    <string name="repeat">Phát lặp lại</string>
    <string name="search">Tìm kiếm</string>
    <string name="choose_to_play">Chọn để phát</string>
    <string name="remove_playlist">Hủy danh sách phát</string>
    <string name="choose_to_delete">Chọn để xóa</string>
    <string name="delete">Xóa</string>
    <string name="details">Thông tin</string>
    <string name="play">Phát</string>
    <string name="share">Chia sẻ</string>
    <string name="set_ringtone">Đặt làm nhạc chuông</string>
    <string name="dlg_title">Tiêu đề:</string>
    <string name="dlg_artist">Nghệ sĩ:</string>
    <string name="dlg_duration">Thời lượng:</string>
    <string name="dlg_album">Album:</string>
    <string name="dlg_genre">Thể loại:</string>
    <string name="dlg_path">Vị trí:</string>
    <string name="path_example">/sdcard/Music/EmGaiMua.mp3</string>
    <string name="OK">Đồng ý</string>
    <string name="Cancel">Thoát</string>
    <string name="Delete_request">Chắc chắn xóa</string>
    <string name="share_with">Chia sẻ bài hát qua</string>
    <string name="app_description">MediaPlayer 1.0 - Music player demo for android built by students of UTC.</string>
    <string name="setTime">Hẹn giờ tự tắt</string>
    <string name="search_view_hint">Tìm bài hát</string>
    <string name="turn_off">Tắt</string>
    <string name="after5min">Sau 5 phút</string>
    <string name="after10min">Sau 10 phút</string>
    <string name="after20min">Sau 20 phút</string>
    <string name="after30min">Sau 30 phút</string>
    <string name="after1hour">Sau 1 giờ</string>
    <string name="after2hours">Sau 2 giờ</string>
    <string name="tb_hen_gio_tat">Hẹn giờ đã tắt</string>
    <string name="tb_hen_gio_5p">Tự động tắt sau 5 phút !</string>
    <string name="tb_hen_gio_10p">Tự động tắt sau 10 phút !</string>
    <string name="tb_hen_gio_20p">Tự động tắt sau 20 phút !</string>
    <string name="tb_hen_gio_30p">Tự động tắt sau 30 phút !</string>
    <string name="tb_hen_gio_1h">Tự động tắt sau 1 giờ !</string>
    <string name="tb_hen_gio_2h">Tự động tắt sau 2 giờ !</string>
    <string name="genre_example">Nhạc trẻ, tình yêu</string>
</resources>
