<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context="com.example.deadpool.mediaplayer.MainActivity">

    <LinearLayout
        android:id="@+id/upLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:background="@drawable/app_bg2"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/tvLyrics"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.6"
            android:padding="12dp"
            android:layout_margin="20dp"
            android:background="@color/colorTransparent1"
            android:textAlignment="center"
            android:text="@string/default_song"
            android:textColor="#fff"
            android:scrollbars="vertical"
            android:textSize="15sp"/>

        <SeekBar
            android:id="@+id/durationSeekBar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:maxHeight="5dp"
            android:layout_marginBottom="8dp"
            android:clickable="false"
            android:progressDrawable="@drawable/custom_seekbar_progress"
            android:thumb="@drawable/custom_seekbar_thumb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:orientation="horizontal"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_currenttime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/current_time_example"
                android:textSize="13sp"
                android:clickable="false"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tv_endtime"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/duration_example"
                android:textSize="13sp"
                android:clickable="false"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="@color/colorPrimary3"
        android:orientation="vertical"
        android:padding="13dp"
        android:visibility="visible"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.4"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    android:id="@+id/currentSongName"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:text="@string/default_song"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/currentSingerName"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/default_artist"
                    android:textSize="18sp"
                    android:focusable="true"
                    android:duplicateParentState="true"
                    android:ellipsize="marquee"
                    android:fadingEdge="horizontal"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="true">
                    <requestFocus android:duplicateParentState="true"
                        android:focusable="true"
                        android:focusableInTouchMode="true" />
                </TextView>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_shuffle"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1.2"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/shuffle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_volume"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:background="@drawable/custom_button_bg"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/speaker" />

            <ImageButton
                android:id="@+id/btn_prev2"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:background="@drawable/custom_button_bg"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/back" />

            <ImageButton
                android:id="@+id/btn_play2"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:background="@drawable/custom_button_bg"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/play_button" />

            <ImageButton
                android:id="@+id/btn_next2"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:adjustViewBounds="true"
                android:background="@drawable/custom_button_bg"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/next" />

            <ImageButton
                android:id="@+id/btn_repeat"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:background="@drawable/custom_button_bg"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/replay" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
